[FD-12807]-alignment issue and special character issue in schedule reports in hebrew

--- a/public/src/falcon/falcon-rtl.scss
+++ b/public/src/falcon/falcon-rtl.scss
@@ -41,6 +41,15 @@
       float: right !important;
     }
   }
+  .modal {
+    &.fade.in {
+      .modal-header {
+        .close {
+          float: left;
+        }
+      }
+    }
+  }
   .form-horizontal select {
     content: "\200E‎";
   }
